vbnc/vbnc/tests/Errors/30311-45.vb
Class Date1
    Public Shared Function Main() As Integer
        Dim a As Long = TimeSpan.FromSeconds(1)
    End Function
End Class